# third_party_backends

./: BUILD.gn  OAT.xml  README.OpenSource  README_zh.md  bundle.json  install.py
backend/: dll.c
include/sane/: .gitignore  config.h  sanei_debug.h  usb_manager.h
patches/:  patches.json  add_thread_poll.patch  dll.c.patch  hilog_debug.patch  modify_load_function.patch  modifying_driver_search_path.patch  patches.json  usbmanager.patch
sanei/: sanei_init_debug.c  sanei_thread.c  sanei_usb.c  usb_manager.cpp
threadpool/include/: threadpool_c.h  threadpool_wrapper.h
threadpool/src/: threadpool_c.cpp  threadpool_wrapper.cpp
